--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "resolveJsonModule": true,
-    "types": []
+    "types": [],
+    "target": "es2020"
   },
   "files": [
     "src/main.ts",
